Early version of The Odin Project - RockPaperScissors game

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>TOD Rock-Paper-Scissors</title>
 </head>
 <body>
-    <p>Open the console (F12)</p>
+    <h1>The Odin Project - Rock Paper Scissors game, console version.</h1>
+    <p>Please, open the console (F12)</p>
     <script src="game.js"></script>
 </body>
 </html>
