--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>TOD Rock-Paper-Scissors</title>
 </head>
 <body>
-    <h1>The Odin Project - Rock Paper Scissors game, console version.</h1>
-    <p>Please, open the console (F12)</p>
+    <button class="playerChoices" type="button">Rock</button>
+    <button class="playerChoices"type="button">Paper</button>
+    <button class="playerChoices"type="button">Scissors</button>
+    <div>
+        <p id="result"></p>
+        <p id="score">0 - 0</p>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
