--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <button class="playerChoices"type="button">Scissors</button>
     <div>
         <p id="result"></p>
-        <p id="score">0 - 0</p>
+        <p id="playerScore"></p>
+        <p id="computerScore"></p>
     </div>
     <script src="game.js"></script>
 </body>
