--- a/index.html
+++ b/index.html
@@ -5,16 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOD Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="playerChoices" type="button">Rock</button>
-    <button class="playerChoices"type="button">Paper</button>
-    <button class="playerChoices"type="button">Scissors</button>
-    <div>
-        <p id="result"></p>
-        <p id="playerScore"></p>
-        <p id="computerScore"></p>
+    <div class="main">
+        <h1>Rock Paper Scissors</h1>
+        <div class="resultsArea">
+            <div class="scoreArea">
+                <p>Player</p>
+                <p id="playerScore" class="score player">0</p>
+            </div>
+            <div></div>
+            <div class="scoreArea">
+                <p>Computer</p>
+                <p id="computerScore" class="score computer">0</p>
+            </div>
+        </div>
+        <div class="playArea">
+            <div>
+                <div id="player" class="icons">
+                    <img class="iconSmall playerChoices" data-value="rock" src="assets/rock.png" alt="">
+                    <img class="iconSmall playerChoices" data-value="paper" src="assets/paper.png" alt="">
+                    <img class="iconSmall playerChoices" data-value="scissors" src="assets/scissors.png" alt="">
+                </div>
+            </div>
+            <div class="">
+                <p id="result"></p>
+            </div>
+            <div>
+                <div id="computer" class="icons">
+                    <img src="" alt="" id="computerChoice" class="iconBig">
+                </div>
+            </div>
+        </div>
     </div>
+
+
     <script src="game.js"></script>
 </body>
 </html>
